syntax = "proto3";

enum ContactType {
    Email = 0;
    Phone = 1;
}

enum CustomerStatusType {
    None = 0;
    Simple = 1;
    Partial = 2;
    Complete = 3;
}